# biomedical-evidence-agent

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.web  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: evaluation_claims.jsonl  evaluation_dossiers.jsonl  evaluation_entities.jsonl  evaluation_moa.jsonl  evaluation_quant.jsonl  evaluation_stances.jsonl  evaluation_stress.jsonl  evaluation_verdicts.jsonl  ontology.jsonl  sample_corpus.jsonl
docs/: architecture.md  demo_video.md  demo_video_ja.md  demo_video_ui.md  differentiation.md  evaluation.md  example_output.md  faq_judges.md  hackathon_demo.md  submission.md  submission_form.md
experiments/: README.md  compare_claims.py  document_audit.py  hypothesis_stress_test.py  reviewer_duel.py
outputs/: example_claim_audit.json  example_claim_audit.md  example_claim_audit_claude_reviewer.md  example_claim_audit_il17a.md  example_claim_audit_pubmed.md  example_claim_audit_vitamin_d_pubmed.md  example_claim_comparison.md  example_document_audit.md  example_evidence_map.html  example_extractor_ablation.md  example_pubmed_scan.md  example_reviewer_duel.md  example_reviewer_duel_claude.md
scripts/: demo.sh  eval_llm_ablation.py  pubmed_scan.py  render_hero.py  render_scan_shift.py
src/biomedical_evidence_agent/: __init__.py  aliases.py  api.py  audit.py  cli.py  dossier.py  moa.py  (+12 more)
tests/: test_api.py  test_audit.py  test_experiments.py  test_ontology.py  test_pipeline.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+7 files in other folders)
