[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedical-evidence-agent"
version = "0.1.0"
description = "Toy biomedical evidence synthesis demo with retrieval, claim extraction, and evidence cards."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Keigo Takahashi"}]
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
llm = ["anthropic>=0.40"]
ui = ["streamlit>=1.30"]

[project.scripts]
biomedical-evidence-agent = "biomedical_evidence_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
